# Biser

./: .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  calculator_cpp.cpp  calculator_r.cpp  calculator_tester.cpp  test_r.r
R/: .RData  .Rhistory  biser.r  biser_r.r  initial.r  profile.r  server.R  ui.R  utils.r
config/: params.json
include/BiserLikeModel/: biosensor_information.h  constants.h  explicit_calculator.h  utils.h
src/: explicit_calculator.cpp  utils.cpp
tests/: tests.cpp
